Revision history for Perl extension Wx.

0.13
	- New build system, allows building wxPerl extension written using
	  XS outside of the wxPerl tree.
	- Added Wx::Wave
	- Added Wx::MemoryFSHandler
	- Added Wx::Perl::Carp (thanks to podmaster).

0.12  Mon Dec 02 17:50:43 2002
	- new DEPRECATIONS section in README.txt, please read it
	- it is now possibile to get the native handle of a Wx::Window
	- implemented wxWizard and related classes
	- Document/View framework (thanks to Simon Flack)
	- Mostly completed wxStyledTextCtrl interface
          (thanks to Graciliano M. P. and Simon Flack)
	- implemented wxFontEnumerator and wxFontMapper
	- implemented wxLogChain and wxLogPassThrough (2.3)
	- Wx::PlLog, Wx::PlLogPassThrough, for custom logging

0.11  Thu Aug 01 15:59:59 2002
	- wxTextAttr ( 2.3 )
	- wxStyledTextControl, based on Scintilla
	  (thanks to Marcus Friedlaender)
	- Wx::Perl::SplashFast, for faster splash screens
	  (thanks to Graciliano M. P.)
	- wxToolBarTool
	- Wx::PlFileSystemHandler, for custom file system handlers
	- compatibility with Perl 5.7.3 and later
	- updated build instructions, using suggestions from
	  Graciliano M. P. and Marcus Friedlaender
	- allow compilation of a single big Wx.so/dll; this allows building
	  against a static wxWindows library
	- wxThread::IsMain(), some testing with threads
	  for Perl 5.7.3 ( works with some caveats )
	- wxPlEvent and wxPlCommandEvent

0.10  Sun Mar 03 19:33:55 2002
	- Fix a silly typo that broke wxTaskBar

0.09  Fri Mar 01 20:59:59 2002
	- wxTaskBarIcon ( MS Windows only )
	- wxGrid, wxGridCellAttr
	- wxGridCellRenderer, wxGridCellEditor
	- wxProcess and wxExecute
	- wxConfig

0.08  Sat Dec 01 10:23:44 2001
	- wxToggleButton ( 2.3 )
	- wxSingleInstanceChecker ( 2.3 )
	- wxListView, virtual wxListCtrl ( 2.3 )
	- build system reorganization, hope this one is the
	  last one...
	- XRC ( Xml ResourCes ) wrapper ( 2.3 )
	- wxClipboard & wxDataObject
	- Drag-and-Drop support
	- MDI architecture