@@ -29,7 +29,9 @@ foreach my $t ( @tests ) {
   ok( 1, "got there after $class->Destroy" );
 }
 
-Wx::Event::EVT_IDLE( $this, sub { $this->Destroy } );
+Wx::Event::EVT_IDLE( $this,
+                     sub { $this->Destroy } );
+$this->Destroy if Wx::wxMSW;
 };
 
 package main;
